--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,11 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "pwa-node",
+      "request": "launch",
       "name": "Launch Program",
-      "program": "${workspaceFolder}/addressbook.js",
-      "request": "launch",
       "skipFiles": ["<node_internals>/**"],
-      "type": "pwa-node"
-    },
-    {
-      "type": "pwa-chrome",
-      "request": "launch",
-      "name": "Launch Chrome against localhost",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}"
+      "program": "${workspaceFolder}\\puhelinluettelo.js"
     }
   ]
 }
